fixed responsive-screen issue traffic container was too short on wider screens

--- a/src/components/Stations/Stations.scss
+++ b/src/components/Stations/Stations.scss
@@ -224,5 +224,8 @@ $filter-height: 50px;
   justify-content: center;
   padding-block: 10px;
   width: 100%;
-  height: 100px;
+  height: 113px;
+  @media (max-width: 600px) {
+    height: 100px;
+  }
 }
